Nested frame nodes alpha issue #77340

Closed
opened 2020-06-04 04:08:23 +02:00 by michael campbell · 7 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-01 20:37, hash: 1d4bae8566
Worked: (newest version of Blender that worked as expected)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error

see below, inner frame colour is incorrect (PS, please make wire colours rgba instead of rgb):

image.png

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-01 20:37, hash: `1d4bae8566` Worked: (newest version of Blender that worked as expected) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** see below, inner frame colour is incorrect (PS, please make wire colours rgba instead of rgb): ![image.png](https://archive.blender.org/developer/F8575456/image.png)

Added subscriber: @3di

Added subscriber: @3di
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm the behavior.
Color itself is fine for me, it is just the alpha that is not going all the way down to zero.
#77293 (nodes are darker than node background when both are set to the same value) might be related (in that some alpha layering/blending does unexpected things).

Can confirm the behavior. Color itself is fine for me, it is just the alpha that is not going all the way down to zero. #77293 (nodes are darker than node background when both are set to the same value) might be related (in that some alpha layering/blending does unexpected things).
Philipp Oeser changed title from nested frame nodes dont respect theme colour preferences to Nested frame nodes alpha issue 2020-06-04 10:14:12 +02:00

I've noticed that the nested frames are the wrong colour even if alpha is set to 1, not sure if this makes it a different issue than the one you've merged it with?

All nested frames are the correct colour, but the top level frame is darker, looks to be something to do with the top level frame having a shadow and a highlight at the top.

image.png

I've noticed that the nested frames are the wrong colour even if alpha is set to 1, not sure if this makes it a different issue than the one you've merged it with? All nested frames are the correct colour, but the top level frame is darker, looks to be something to do with the top level frame having a shadow and a highlight at the top. ![image.png](https://archive.blender.org/developer/F8577833/image.png)

This issue was referenced by b2d9020aa5

This issue was referenced by b2d9020aa5d9a6a98cc89a8b5fbd69b12e99d8c5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-08-17 12:35:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77340
No description provided.