Fix T77340: nested nodes alpha issues

Reviewers: Severin

Differential Revision: https://developer.blender.org/D8573